@startuml
title Hospital Dashboard UML

' ---------------- Classes ----------------
class Patient {
    - id: ObjectId
    - first_name: str
    - last_name: str
    - dob: str
    - bay: int
    - bed: str
    - priority: str
    - color: str
    - presence: bool
    --
    + __init__(first_name, last_name, dob, bay, bed, priority, presence, color, _id=None)
}

class Database {
    - db: Any
    --
    + __init__(db)
    + create_bay(bay_num: int) : bool
    + delete_bay(bay_num: int) : bool
    + insert_patient(patient: Patient) : ObjectId
    + update_patient(patient: Patient) : bool
    + delete_patient(patient: Patient) : bool
    + find_create_patient(bay: int, bed: int) : Patient
    + get_bay_patients(bay: int) : list[Patient]
}

class BedBuddy {
    - selected_bed
    - current_bay: int
    --
    + load_db_bays()
    + setup_sidebar()
    + highlight_tab(bay_number)
    + setup_patient_view()
    + setup_bay_view()
    + refresh_tree(bay_filter=None)
    + update_bed_info(curr_patient)
    + add_patient_dialog(bay, bed)
    + edit_patient_dialog(patient: Patient)
    + create_bed(frame, patient)
    + show_bay(bay_number)
    + show_all_bays()
    + add_bay()
    + remove_bay()
    + add_bed()
    + remove_bed()
}

' ---------------- Relationships ----------------
Database  --> Patient
BedBuddy -->  Database
BedBuddy -->  Patient

@enduml
